# serial-monitor

./: README.md  config.json  pyproject.toml  script.py
